# bitcoin-decentral

./: .clang-format  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURE_TESTING_PLAN.md  BITCOIN_DECENTRAL_ACHIEVEMENT_SUMMARY.md  BITCOIN_DECENTRAL_COMPLETE_ACHIEVEMENT_SUMMARY.md  BITCOIN_DECENTRAL_DEPLOYMENT_GUIDE.md  BITCOIN_DECENTRAL_FINAL_ACHIEVEMENT_REPORT.md  BITCOIN_DECENTRAL_FINAL_STATUS_REPORT.md  BITCOIN_DECENTRAL_ULTIMATE_ACHIEVEMENT_SUMMARY.md  BITCOIN_DECENTRAL_VS_BSV_DOMINANCE_REPORT.md  CMakeLists.txt  COMMUNITY.md  COMMUNITY_ANNOUNCEMENT.md  COMPLETE_ECOSYSTEM_GUIDE.md  COMPLETE_SCALING_FEATURES_VALIDATION_REPORT.md  COMPREHENSIVE_INTEGRATION_TEST_REPORT.md  COMPREHENSIVE_TESTING_VALIDATION_REPORT.md  CONTRIBUTING.md  DEVELOPER_GETTING_STARTED.md  DEVELOPER_QUICK_START_GUIDE.md  Dockerfile.ci  GLOBAL_COMMUNITY_ANNOUNCEMENT.md  HISTORIC_PUBLIC_NODE_ACHIEVEMENT_REPORT.md  LARGE_BLOCK_STRESS_TEST_PLAN.md  LARGE_BLOCK_STRESS_TEST_RESULTS.md  LICENSE  MULTI_NODE_TESTNET_DEPLOYMENT.md  MULTI_NODE_TESTNET_VALIDATION_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_STATUS.md  PHASE1_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE2_CTOR_IMPLEMENTATION_REPORT.md  PHASE2_PLANNING.md  PHASE2_TESTING_VALIDATION.md  PHASE3_2_HYBRID_CONSENSUS_IMPLEMENTATION.md  PHASE3_3_CROSS_CHAIN_INTEROPERABILITY_IMPLEMENTATION.md  PHASE3_QUANTUM_IMPLEMENTATION.md  PHASE3_REMAINING_MILESTONES.md  (+15 more)
src/: CMakeLists.txt  README.md  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoindecentral-chainstate.cpp  bitcoindecentral-cli.cpp  bitcoindecentral-tx.cpp  bitcoindecentral-util.cpp  bitcoindecentral-wallet.cpp  bitcoindecentrald.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  btcd_params.cpp  btcd_params.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  (+112 more)
src/bench/: CMakeLists.txt  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitcoindecentral.cpp  bip324_ecdh.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  checkblock.cpp  checkblockindex.cpp  checkqueue.cpp  cluster_linearize.cpp  coin_selection.cpp  crypto_hash.cpp  descriptors.cpp  disconnected_transactions.cpp  duplicate_inputs.cpp  ellswift.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  index_blockfilter.cpp  load_external.cpp  lockedpool.cpp  logging.cpp  mempool_ephemeral_spends.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  parse_hex.cpp  peer_eviction.cpp  poly1305.cpp  pool.cpp  prevector.cpp  random.cpp  readwriteblock.cpp  (+15 more)
src/common/: args.cpp  args.h  bloom.cpp  bloom.h  config.cpp  init.cpp  init.h  interfaces.cpp  messages.cpp  messages.h  netif.cpp  netif.h  pcp.cpp  pcp.h  run_command.cpp  run_command.h  settings.cpp  settings.h  signmessage.cpp  signmessage.h  system.cpp  system.h  types.h  url.cpp  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.cpp  stdin.h
src/consensus/: amount.h  consensus.h  governance.cpp  governance.h  hybrid.cpp  hybrid.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/core/: CMakeLists.txt
src/crypto/: CMakeLists.txt  aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  common.h  hex_base.cpp  hex_base.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  quantum.cpp  quantum.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  txindex.cpp  txindex.h
src/init/: bitcoindecentral-gui.cpp  bitcoindecentral-node.cpp  bitcoindecentral-qt.cpp  bitcoindecentral-wallet.cpp  bitcoindecentraldecentrald.cpp  common.cpp  common.h
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  mining.h  node.h  types.h  wallet.h
src/interop/: bridges.cpp  bridges.h  ibc.cpp  ibc.h
src/ipc/: CMakeLists.txt  context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: CMakeLists.txt  bitcoindecentralkernel.cpp  blockmanager_opts.h  caches.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  disconnected_transactions.cpp  disconnected_transactions.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_removal_reason.cpp  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  warning.h
src/logging/: timer.h
src/minisketch/: README.md  autogen.sh
src/node/: CMakeLists.txt  abort.cpp  abort.h  blockmanager_args.cpp  blockmanager_args.h  blockstorage.cpp  (+53 more)
tests/: CMakeLists.txt  README.md  combine_logs.py  create_cache.py  example_test.py  feature_abortnode.py  feature_addrman.py  feature_anchors.py  feature_asmap.py  feature_assumeutxo.py  feature_assumevalid.py  feature_bind_extra.py  feature_bind_port_discover.py  feature_bind_port_externalip.py  feature_bip68_sequence.py  feature_block.py  feature_blocksdir.py  feature_blocksxor.py  feature_cltv.py  feature_coinstatsindex.py  feature_config_args.py  feature_csv_activation.py  feature_dbcrash.py  feature_dersig.py  feature_dirsymlinks.py  feature_discover.py  feature_fastprune.py  feature_fee_estimation.py  feature_filelock.py  feature_framework_miniwallet.py  feature_framework_unit_tests.py  feature_help.py  feature_includeconf.py  feature_index_prune.py  feature_init.py  feature_loadblock.py  feature_logging.py  feature_maxtipage.py  feature_maxuploadtarget.py  feature_minchainwork.py  (+222 more)
(+978 files in other folders)
